--- a/plugin.xml
+++ b/plugin.xml
@@ -41,6 +41,10 @@
 
     <header-file src="src/ios/SocialSharing.h"/>
     <source-file src="src/ios/SocialSharing.m"/>
+    <header-file src="src/ios/DashlaneExtensionConstants.h"/>
+    <source-file src="src/ios/DashlaneExtensionConstants.m"/>
+    <header-file src="src/ios/DashlaneExtensionRequestHelper.h"/>
+    <source-file src="src/ios/DashlaneExtensionRequestHelper.m"/>
 
     <framework src="Social.framework" weak="true" />
     <framework src="MessageUI.framework" weak="true" />
