DEV-DRIVEN Prototyped fetching credentials from dash lane. Using dash lane example app name currently, because we don't have saving credentials yet.

--- a/plugin.xml
+++ b/plugin.xml
@@ -39,6 +39,10 @@
       </feature>
     </config-file>
 
+    <header-file src="src/ios/DashlaneExtensionConstants.h"/>
+    <source-file src="src/ios/DashlaneExtensionConstants.m"/>
+    <header-file src="src/ios/DashlaneExtensionRequestHelper.h"/>
+    <source-file src="src/ios/DashlaneExtensionRequestHelper.m"/>
     <header-file src="src/ios/SocialSharing.h"/>
     <source-file src="src/ios/SocialSharing.m"/>
 
